--- a/.env
+++ b/.env
@@ -24,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=a73f5192eacfac
-MAIL_PASSWORD=51db4c081ad953
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=ryansanjaya290799@gmail.com
+MAIL_PASSWORD=Fcsz1432!!
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
